fixed photos covering footer in tablet mode

--- a/menu.css
+++ b/menu.css
@@ -9,22 +9,22 @@
 }
 @media only screen and (min-width: 700px) {
     .home_image_blank{
-        height: 75vh;
+        height: 60vh;
         background-attachment: fixed;
     }
 }
-@media only screen and (min-width: 768px) {
-    .home_menus{
-        background: #FFF;
-        padding: 150px 0;
-    }
-}
+
 .home_menus{
     background: white;
-    padding: 50px 0;
+    padding: 20px 0;
     text-align: center;
 }
-
+@media only screen and (min-width: 799px) {
+    .home_menus{
+        background: #FFF;
+        padding: 100px 0;
+    }
+}
 .menu_container{
     max-width: 1200px;
     width: 95%;
@@ -111,6 +111,7 @@
 }
 .home_menu_photos{
     margin-top: 30px;
+    margin-bottom: 50px;
     
 }
 @media only screen and (min-width: 1024px) {
@@ -121,7 +122,7 @@
 
 
 .home_menu_photo_item{
-    height: 300px;
+    height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;  
@@ -137,3 +138,17 @@
         float: left;
     }
 }
+
+@media only screen and (max-width: 1149px) {
+    .home_menu_blank{
+    margin-bottom: 25rem;
+}
+}
+@media only screen and (max-width: 799px) {
+    .home_menu_blank{
+    margin-bottom: 0;
+    display: none;
+
+}
+}
+
